Folia Support + other misc. changes